# Jacobian

cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cudaBaseTiming  cudaSharedTiming  f_eval.cuh  f_eval2.cuh  jacobianBase  jacobianBase.cu  jacobianBase2  jacobianBase2.cu  jacobianShared  jacobianShared.cu  jacobianShared2  jacobianShared2.cu  outBase  outBase2  outShared2  outputBase  profBase  slurmBase.sh  slurmBase2.sh  slurmShared.sh  slurmShared2.sh
logs/: cudaBase2Log  cudaShared2Log  sequentialLog
omp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  f_eval2.h  hi.sh  jacobian  jacobian.c  jacobian_temp.c  ompLog  outOmp  slurm-1.sh  slurm.sh
openacc/: err  f_eval2.h  jacobian.cpp  slurm.sh  slurmTest.sh  slurmTiming.sh
scripts/: README  README~  generateInput.py  generatePlots.py  generatePlots.py~
sequential/: CMakeCache.txt  Makefile  cmake_install.cmake  f_eval.h  f_eval2.h  jacobian  jacobian.c  jacobian_exc.c  outSeq  slurm-1.sh  slurm.sh
thrust/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  f_eval.cuh  f_eval2.cuh  f_eval_vec.cuh  hi.sh  in_thrust  jacobian  jacobian.c  jacobian.cu  jacobian2  jacobian_cp.cu  jacobian_test.cu  log_thrust  outBase2  out_thrust  output  problem3  problem3.cu  problem3.out  sequentialLog  slurm.sh
